--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   --light-green: #6D9481;
   --sage-green: #91ac84;
   --green: #5c7d6d;
-  --rose: #ffdfe5;
+  --rose: #f4d1e2;
   --yellow: #EC9A29;
 }
 
@@ -20,8 +20,9 @@
   left: calc(50% - 4em);
   width: 6em;
   height: 6em;
-  border: 1.1em solid rgba(0, 0, 0, 0.2);
-  border-left: 1.1em solid var(--green);
+  background-image: url(../src/assets/imgs/record_player.svg);
+  /*border: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-left: 1.1em solid var(--green);*/
   border-radius: 50%;
   animation: loading 4s infinite linear;
 }
@@ -45,7 +46,10 @@
 }
 
 body {
-  background-color: var(--beige) !important;
+  background: var(--beige);
+  background: linear-gradient(34deg, rgba(255,231,238,1) 6%, rgba(255,252,245,1) 78%);
+  animation: gradient 15s ease infinite;
+
 }
 
 li {
@@ -61,16 +65,30 @@ li {
 .App {
   font-family: 'Syne', sans-serif;
   background-color: var(--beige);
+  background: linear-gradient(34deg, rgba(255,231,238,1) 6%, rgba(255,252,245,1) 78%);
   color: var(--text-brown);
+  animation: gradient 15s ease infinite;
   width: 100%;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
 h2 {
   font-family: 'Syne Mono', monospace; 
 }
 
 .App-header {
-  background-color: var(--beige);
   color: var(--text-brown);
   min-height: 100px;
   display: flex;
@@ -148,7 +166,7 @@ ul.App-header {
 }
 
 .Logo:hover .logoRight {
-  margin-left: 10.5%;
+  margin-left: 9.5%;
   transition: .5s ease-in-out;
 }
 
@@ -159,7 +177,7 @@ ul.App-header {
   font-size: 24px;
   font-weight: 700;
   transition-duration: .5s;
-  color: var(--beige);
+  color: rgba(255, 255, 255, 0);
 }
 
 .Logo:hover .logoText {
@@ -220,7 +238,12 @@ ul.App-header {
 }
 
 .latestInfo > h2  {
+  margin-bottom: 5px;
   color: var(--dark-pink);
+}
+
+.latestInfo > h3  {
+  margin-bottom: 10%;
 }
 
 .spotifyContainer,
@@ -932,8 +955,8 @@ ul.App-header {
 
   .headshotImageContainer,
   .Headshot {
-    width: 180px;
-    height: 250px;
+    width: 160px;
+    height: 100%;
   }
   
   .App-header li {
@@ -966,11 +989,9 @@ ul.App-header {
   .projectPage > p {
     font-size: 16px;
   }
-
 }
 
 @media screen and (max-width: 351px) {
-
   .Navbar {
     width: 135vw;
   }
@@ -982,7 +1003,6 @@ ul.App-header {
   .App-header-vertical {
     right: -20vw;
   }
-
   
   .projectPage {
     margin: 1% 5%;
