--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Syne+Mono&family=Syne:wght@400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Sora:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap');
 :root {
   --beige: #FFFCF5;
   --text-brown: #4B4841;
@@ -47,13 +47,14 @@
 
 body {
   background: var(--beige);
-  background: linear-gradient(34deg, rgba(255,231,238,1) 6%, rgba(255,252,245,1) 78%);
-  animation: gradient 15s ease infinite;
-
 }
 
 li {
   list-style: none; 
+}
+
+#tsparticles { 
+  z-index: 0;
 }
 
 .cardLink {
@@ -63,32 +64,18 @@ li {
 }
 
 .App {
-  font-family: 'Syne', sans-serif;
+  font-family: 'Sora', sans-serif;
   background-color: var(--beige);
-  background: linear-gradient(34deg, rgba(255,231,238,1) 6%, rgba(255,252,245,1) 78%);
   color: var(--text-brown);
-  animation: gradient 15s ease infinite;
   width: 100%;
 }
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
 
 h2 {
   font-family: 'Syne Mono', monospace; 
 }
 
 .App-header {
+  z-index: 1;
   color: var(--text-brown);
   min-height: 100px;
   display: flex;
@@ -96,6 +83,8 @@ h2 {
   align-items: center;
   justify-content: right;
   font-size: 24px;
+
+  font-weight: 600;
 }
 
 .App-header li {
@@ -103,12 +92,22 @@ h2 {
   margin-left: 50px;
   justify-content: right;
   list-style: none; 
+  transition: .3s;
 }
 
 ul.App-header {
   display: flex;
   flex-direction: row;
 }
+
+ul.App-header:hover li {
+  filter: blur(4px);
+}
+
+ul.App-header li:hover {
+  filter: blur(0px);
+}
+
 
 .App-link {
   color: var(--text-brown);
@@ -120,13 +119,13 @@ ul.App-header {
 }
 
 .Navbar {
+  z-index: 1;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   margin: 0% 2%;
 }
-
 
 .hamburger {
   display: none;
@@ -138,6 +137,7 @@ ul.App-header {
   justify-content: flex-start;
   align-items: center;
   width: 450px;
+  font-family: 'Syne', sans-serif; 
 }
 
 .logoLeft,
@@ -189,7 +189,6 @@ ul.App-header {
 .heroContainer,
 .musicContainer,
 .projectContainer {
-  z-index: 1;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -240,9 +239,12 @@ ul.App-header {
 .latestInfo > h2  {
   margin-bottom: 5px;
   color: var(--dark-pink);
+  font-weight: 600;
 }
 
 .latestInfo > h3  {
+  font-family: 'Sora' , sans-serif;
+  font-weight: 400;
   margin-bottom: 10%;
 }
 
@@ -251,6 +253,7 @@ ul.App-header {
   padding: 0%;
   width: 370px;
   flex-direction: column;
+  z-index: 1;
 }
 
 .spotifyContainer {
@@ -270,6 +273,7 @@ ul.App-header {
   border-radius: 15%;
   border: 8px solid #4b685a;
   margin-right: 30px;
+  z-index: 1;
 }
 
 .latestText > h3 {
@@ -285,12 +289,14 @@ ul.App-header {
 
 .heroText {
   margin: 0px 30px;
+  z-index: 1;
 }
 
 .heroText > h1 {
   line-height: 80px;
   margin: 5px 0px;
   color: var(--light-green);
+  font-family: 'Syne', sans-serif;
   font-size: 80px;
   font-weight: 700;
   letter-spacing: 0px;
@@ -300,18 +306,32 @@ ul.App-header {
 .heroText > h4 {
   max-width: 600px;
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 40px;
   margin: 20px 0px;
+  font-family: 'Sora', monospace; 
+
 }
 
+.heroText > h4 > strong {
+  transition: ease-in-out .3s;
+  font-family: 'Syne Mono', monospace; 
+}
+
+.heroText > h4 > strong:hover {
+  color: var(--dark-pink);
+  transition: ease-in-out .3s;
+}
 .heroText > h3 {
   margin-top: 0%;
 }
 
 .heroText > h4 > strong {
-  font-family: 'Syne Mono', monospace; 
-  color: var(--dark-pink);
+  color: var(--black);
+  font-weight: 800;
+  font-style: italic;
+  transition: ease-in-out .3s;
+
 }
 
 .buttonContainer {
@@ -325,10 +345,10 @@ ul.App-header {
   font-size: 24px;
   font-weight: 700;
   color: var(--light-green);
-  font-family: 'Syne Mono', monospace; 
+  font-family: 'Syne', monospace; 
   text-decoration: none;
   margin-right: 30px;
-  border: 1px solid var(--green);
+  border: 2px solid var(--green);
   padding: 5px 10px;
   border-radius: 10px;
   transition: 250ms ease-in-out;
@@ -337,6 +357,7 @@ ul.App-header {
 .homeButtons:hover {
   color: white;
   background-color: var(--green);
+  transition: 250ms ease-in-out;
 }
 
 .homeButtons > p {
@@ -388,10 +409,12 @@ ul.App-header {
   flex-direction: column;
   align-items: center;
   margin: 0% 12%;
+  z-index: 1;
 }
 
 .aboutContainer {
   flex-direction: row-reverse;
+  z-index: 1;
 }
 
 .aboutText {
@@ -505,12 +528,14 @@ ul.App-header {
   width: 980px;
   font-size: 40px;
   margin: 50px 0px 0px 0px;
+  z-index: 1;
 }
 
 .projectPage > p {
   text-align: left;
   width: 980px;
   justify-content: flex-start;
+  z-index: 1;
 }
 
 .cardList,
@@ -520,6 +545,7 @@ ul.App-header {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  z-index: 1;
 }
 
 .projectPage {
@@ -631,15 +657,16 @@ ul.App-header {
 }
 
 .cardInfo > h4 {
-  font-weight: 600;
+  font-weight: 500;
   color: var(--beige);
   font-size: 16px;
   margin: 5px 0px 0px 0px;
+  
 }
 
 .cardDetails > h5,
 .cardDetails > h5 > a {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 13px;
   color: var(--beige);
   margin: 5px 0px 0px 0px;
@@ -670,7 +697,7 @@ ul.App-header {
   transform: translateY(-3px);
 }
 
-/* CONTACT PAGE */ 
+/* ABOUT ME PAGE */ 
 
 .contactPage {
   display: flex; 
@@ -691,7 +718,62 @@ ul.App-header {
   box-shadow: 25px -20px var(--light-green);
 }
 
+/* FOOTER */ 
+.footer {
+  font-family: 'Syne', sans-serif;
+  z-index: 10;
+  height: 150px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 40px 0px;
+}
 
+.footer-heading {
+  font-size: 16px;
+  z-index: 1;
+}
+
+.footer-heading h1 {
+  text-align: center;
+  margin: 1%;
+}
+.footer-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  height: 50px;
+}
+
+.footer-links a {
+  margin-bottom: 5px;
+  margin-right: 2%;
+  text-decoration: none;
+  color: var(--black);
+  transition: text-decoration-color 1000ms ease-in-out;
+  transition: color .3s linear;
+}
+
+.footer-links a:focus,
+.footer-links a:hover {
+  text-decoration: underline 1px var(--green);
+  color: var(--green);
+  transition: .3s linear;
+}
+
+.footer-link {
+  display: flex;
+  line-height: 0px;
+}
+
+.footer-links img {
+  height: 30px;
+  width: 30px;
+} 
 /* MEDIA QUERIES */
 @media screen and (max-width: 1150px) {
   .aboutText {
@@ -751,6 +833,7 @@ ul.App-header {
   .projectPage > p,
   .projectPage > h2 {
     width: 600px;
+    z-index: 1;
   }
 
   /* about me page*/
