--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Syne+Mono&family=Syne:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sora:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 :root {
   --primary-background: #FFFCF5;
   --secondary-background: #91ac84;
@@ -12,7 +13,7 @@
   --accent-text-color: #6A0B44;
   --hover-text-color: #08605F;
   --card-text-color: #FFFCF5;
-
+  --icon-color: #5c7d6d;
   --beige: #FFFCF5;
   --black: #262626;
   --grey: #585555;
@@ -25,6 +26,7 @@
   --yellow: #EC9A29;
   --cyan: #08605F;
   --cherry-blossom: #F6C1C3;
+  --record-border: #37644e; 
 }
 
 [data-theme="dark"] {
@@ -39,7 +41,12 @@
   --accent-text-color: #F6C1C3;
   --hover-text-color: #6A0B44;
   --toggle-bg: #08605F;
+  --icon-color: #FFFCF5;
+  --record-border: #795a7a; 
+  --card-text-color: #FFFCF5;
+
 }
+
 .loader:empty {
   position: absolute;
   top: calc(50% - 4em);
@@ -82,7 +89,7 @@ li {
 }
 
 .cardLink {
-  color: var(--primary-background);
+  color: var(--card-text-color);
   font-size: 14px;
   text-decoration: underline;
 }
@@ -293,9 +300,9 @@ ul.App-header li:hover {
   min-width: 250px;
   max-height: 250px;
   max-width: 250px;
-  background: var(--light-green);
+  background: var(--secondary-text-color);
+  border: 8px solid var(--record-border);
   border-radius: 15%;
-  border: 8px solid #4b685a;
   margin-right: 30px;
   z-index: 1;
 }
@@ -369,7 +376,7 @@ ul.App-header li:hover {
   font-size: 24px;
   font-weight: 700;
   color: var(--secondary-text-color);
-  font-family: 'Syne', monospace; 
+  font-family: 'Syne Mono', monospace; 
   text-decoration: none;
   margin-right: 30px;
   border: 2px solid var(--secondary-text-color);
@@ -675,7 +682,7 @@ ul.App-header li:hover {
 
 }
 .cardBack > .cardHeader > h3  {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 15px;
 }
 
@@ -749,15 +756,15 @@ ul.App-header li:hover {
 
 /* FOOTER */ 
 .footer {
-  font-family: 'Syne', sans-serif;
+  font-family: 'Syne Mono', sans-serif;
   z-index: 10;
   height: 150px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding: 40px 0px;
+  /* padding: 40px 0px; */
 }
 
 .footer-heading {
@@ -767,8 +774,10 @@ ul.App-header li:hover {
 
 .footer-heading h1 {
   text-align: center;
-  margin: 1%;
+  margin: 2%;
+  height: 50px;
 }
+
 .footer-links {
   display: flex;
   flex-direction: row;
@@ -780,7 +789,7 @@ ul.App-header li:hover {
 
 .footer-links a {
   margin-bottom: 5px;
-  margin-right: 2%;
+  margin-right: 5%;
   text-decoration: none;
   color: var(--black);
   transition: text-decoration-color 1000ms ease-in-out;
@@ -790,7 +799,7 @@ ul.App-header li:hover {
 .footer-links a:focus,
 .footer-links a:hover {
   text-decoration: underline 1px var(--green);
-  color: var(--green);
+  color: var(--black);
   transition: .3s linear;
 }
 
@@ -802,6 +811,7 @@ ul.App-header li:hover {
 .footer-links img {
   height: 30px;
   width: 30px;
+  fill: var(--icon-color)
 } 
 
 /* Dark Mode */
@@ -820,7 +830,6 @@ ul.App-header li:hover {
   cursor: pointer;
   color: var(--toggle-bg);
   box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
-
 }
 
 .toggle + label::before {
@@ -853,6 +862,7 @@ ul.App-header li:hover {
   transform: translateX(-100%);
   background: linear-gradient(180deg,var(--cyan), var(--light-green));
 }
+
 
 label {
   width: 80px;
@@ -900,8 +910,6 @@ label, label:after {
 label:active:after{ 
   width: 50px; 
 }
-
-/* body input:checked + label:after  { background: var(--cyan )}
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 1150px) {
